# aoc-2023

./: CMakeLists.txt  CMakePresets.json  README.md  newday.py  vcpkg.json
2023/: CMakeLists.txt
day1/: CMakeLists.txt
day1/src/: day1.cpp  main.cpp
day10/: CMakeLists.txt  day10.txt
day10/src/: day10.cpp
day11/: CMakeLists.txt  day11.txt
day11/src/: day11.cpp
day12/: CMakeLists.txt
day12/src/: day12.cpp
day13/: CMakeLists.txt
day13/src/: day13.cpp
day14/: CMakeLists.txt  day14.txt
day14/src/: day14.cpp
day15/: CMakeLists.txt
day15/src/: day15.cpp
day16/: CMakeLists.txt  day16.txt
day16/src/: day16.cpp
day17/: CMakeLists.txt  day17.txt
day17/src/: day17.cpp
day18/: CMakeLists.txt  day18.txt
day18/src/: day18.cpp
day19/: CMakeLists.txt  day19.txt
day19/src/: day19.cpp
day2/: CMakeLists.txt
day2/src/: day2.cpp  main.cpp
day20/: CMakeLists.txt  day20.txt
day20/src/: day20.cpp
day21/: CMakeLists.txt  day21.txt
day21/src/: day21.cpp
day22/: CMakeLists.txt  day22.txt
day22/src/: day22.cpp
day23/: CMakeLists.txt  day23.txt
day23/src/: day23.cpp
day24/: CMakeLists.txt  day24.txt
day24/src/: day24.cpp
day25/: CMakeLists.txt  day25.txt
day25/src/: day25.cpp
day3/: CMakeLists.txt  day3.txt
day3/src/: day3.cpp  main.cpp
day4/: CMakeLists.txt  day4.txt
day4/src/: day4.cpp  main.cpp
day5/: CMakeLists.txt  day5.txt
day5/src/: day5.cpp
day6/: CMakeLists.txt  day6.txt
day6/src/: day6.cpp
day7/: CMakeLists.txt  day7.py  day7.txt
day7/src/: day7.cpp
day8/: CMakeLists.txt
day8/src/: day8.cpp
day9/: CMakeLists.txt  day9.txt
day9/src/: day9.cpp
template/dayn/: CMakeLists.txt
template/dayn/src/: dayn.cpp
